# astra-test

astra-master/: README.md  docker-compose.yaml  main.py  pyproject.toml
astra-master/src/: parser.py  utils.py
astra-master/test/: test_parser.py
astra-master/test/raw_data/: small.xml
