[tool.poetry]
name = "coding test"
version = "0.0.1"
description = "parser astra file"
authors = ["lukas k."]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^4.9.3"
flask = "^2.3.3"
requests = "^2.31.0"
markdown = "^3.4.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
